test/e2e/fixtures/tcpmapping-sni-with-http/queries.json
[
  {
    "url": "/",
    "method": "GET",
    "headers": {
      "Host": "tls-context-host-2"
    },
    "sni": true,
    "insecure": true
  },
  {
    "url": "/tcpmapping-sni-with-http/",
    "method": "GET",
    "headers": {
      "Host": "sni-http.example.com"
    },
    "sni": true,
    "insecure": true
  }
]
